# FF

./: .gitignore  FF.cpp  FF.h  README.md  checking.cpp  checking.h  globals.h  makefile  makefilevic  new_matrix_plot.py  util.h
TESTS/: CMakeCache.txt  CMakeLists.txt  Makefile  run_all_tests.cpp  test_FF  test_FF.cpp
include/: FF.h  globals.h  util.h
src/: FF.cpp  util.cpp
